--- a/bibliography.html
+++ b/bibliography.html
@@ -22,11 +22,13 @@ p.main {
         Kramer, T. (n.d.). What’s the Difference Between 2, 3, and 4-Bladed Propellers? AirplaneAcademy.com. https://airplaneacademy.com/whats-the-difference-between-2-3-and-4-bladed-propellers/
         ‌<br>        <br>
 
-        Bobrov, E. (2017, November 9). White house floor plan with interior details on construction blueprint scheme, seamless pattern stock illustration. iStock. https://www.pexels.com/photo/blue-universe-956981/
+        Bobrov, E. (2017, November 9). White house floor plan with interior details on construction blueprint scheme, seamless pattern stock illustration. iStock. https://www.istockphoto.com/vector/white-house-floor-plan-with-interior-details-on-construction-blueprint-scheme-gm862277766-241390119
         <br>        <br>
 
         Waldron, G. (2025, March 11). AVIC tests two new eVTOL aircraft. Flight Global. https://www.flightglobal.com/aerospace/avic-tests-two-new-evtol-aircraft/162144.article
-            </p>
+            
+    https://www.safetysure.com.au/what-types-of-safety-signs-do-i-need-for-my-warehouse/
+    </p>
 
     <script src="navbar.js"></script>
 </body>
