--- a/design.html
+++ b/design.html
@@ -2,9 +2,7 @@
   <link rel="stylesheet" href="ui.css">
   <title>Propeller Car - Engineering Wutthi Cisco Ames</title>
   <style>
-    .centre::before {
-      background: url('mj_11237_2.jpg') no-repeat center center/cover;
-    }
+
   </style>
 </head>
 
@@ -23,7 +21,8 @@
   <p class="main" style="text-align: center;">
     5 Concept Sketches done on paper
   </p>
-  <img src="Design/concept-sketches.png">
+  <img src="Design/concept-sketches.png"><br>
+  <img src="Design/concept-sketches-2.png" style="width: 500px;">
   <p class="subtitle">CAD Drawings</p>
   <p class="main" style="text-align: center;">
     Made with Onshape
@@ -46,9 +45,211 @@
     Switch
   </p>
   <img src="Design/wiring.png" style="width: 200px;">
+    <p class="subtitle">Propeller Designs</p>
+      <p class="main" style="text-align: center;">
+ <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+  <tr>
+    <th style="width: 20%;">Number of Blades</th>
+    <th style="width: 20%;">Image</th>
+    <th style="width: 20%;">Description</th>
+      
+  </tr>
+
+  <tr>
+    <td style="text-align: left; padding-left: 10px;">4 (Red Bull Can)</td>    
+    <td><img src="images/4-rb.png" style="width: 350px;"></td>
+    <td style="text-align: left; padding-left: 10px;"></td>
+    </td>
+  </tr>
+    <tr>
+    <td style="text-align: left; padding-left: 10px;">4 (Cola Can)</td>    
+    <td><img src="images/4-co.png" style="width: 350px;"></td>
+    <td style="text-align: left; padding-left: 10px;"></td>
+    </td>
+  </tr>
+    <tr>
+    <td style="text-align: left; padding-left: 10px;">3 (Mountain Dew Can)</td>    
+    <td><img src="images/3-md.png" style="width: 350px;"></td>
+    <td style="text-align: left; padding-left: 10px;"></td>
+    </td>
+  </tr>
+    <tr>
+    <td style="text-align: left; padding-left: 10px;">3</td>    
+    <td><img src="images/3-pt.png" style="width: 350px;"></td>
+    <td style="text-align: left; padding-left: 10px;"></td>
+    </td>
+  </tr>
+
+</table>
+        <a href="research.html#propeller">Click here to read more about the Propeller Design</a>
+        </p>
+    <p class="subtitle">Budget and Materials</p>
+    <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+  <tr>
+    <th style="width: 20%;">Name</th>
+    <th style="width: 20%;">Use</th>
+    <th style="width: 20%;">Original Use</th>
+    <th style="width: 20%;">Image</th>
+    <th style="width: 20%;">Price</th>
+      
+  </tr>
+
+  <tr>
+    <td style="text-align: left; padding-left: 10px;">High Desnity Styrofoam (from packages)</td>    
+    <td style="text-align: left; padding-left: 10px;">Chassis and base material for the car. Used for its lightweight and ease of conforming to specifications.</td>
+    <td style="text-align: left; padding-left: 10px;">Used as model making foam, offcuts used.</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Free
+    </td>
+  </tr>
+    <tr>
+    <td style="text-align: left; padding-left: 10px;">Plastic Bottle (Lipton Ice Tea)</td>    
+    <td style="text-align: left; padding-left: 10px;">New Chassis for the car.</td>
+    <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Free
+    </td>
+  </tr>
+      <tr>
+    <td style="text-align: left; padding-left: 10px;">Rubber Band (from Vegetable or Sushi packaging)</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to create better grip from the wheels and the path. Will also be used to hold parts together when they require to be taken off regularly.</td>
+    <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Free
+    </td>
+  </tr>
+        <tr>
+    <td style="text-align: left; padding-left: 10px;">Bottle Caps (milk carton or bottle)</td>    
+    <td style="text-align: left; padding-left: 10px;">Used as the wheelbase for their size and texture.</td>
+    <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Free
+    </td>
+  </tr>
+          <tr>
+    <td style="text-align: left; padding-left: 10px;">Sheet from Aluminium Can</td>    
+    <td style="text-align: left; padding-left: 10px;">Used as the propeller due to its lightness and ability to hold its shape.</td>
+    <td style="text-align: left; padding-left: 10px;">Aluminium Drink Can</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Free
+    </td>
+  </tr>
+            <tr>
+    <td style="text-align: left; padding-left: 10px;">Wooden Dowel/Skewers</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Supplied
+    </td>
+  </tr>
+          <tr>
+    <td style="text-align: left; padding-left: 10px;">Motor</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to power the propeller.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Supplied: Approx $3.50
+    </td>
+  </tr>
+            <tr>
+    <td style="text-align: left; padding-left: 10px;">Battery Pack</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to hold the batteries.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Supplied: Approx $2.00
+    </td>
+  </tr>
+              <tr>
+    <td style="text-align: left; padding-left: 10px;">Wires</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to send current and power between the components motor.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Supplied: Approx $1.50
+    </td>
+  </tr>
+                <tr>
+    <td style="text-align: left; padding-left: 10px;">Batteries</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to power the components.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td>IMAGE HERE</td>
+    <td style="text-align: left; padding-left: 10px;">Supplied: Approx $5.00
+    </td>
+  </tr>
+
+</table>
+  <p class="subtitle">Step by Step Process</p>
+  <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+  <tr>
+    <th style="width: 50%;">Images</th>
+    <th style="width: 50%;">Instructions</th>
+  </tr>
+
+  <tr>
+    <td>Step 1</td>
+    <td style="text-align: left; padding-left: 10px;">
+      Step 1: Collect the required materials.<br>
+      - At least 1 aluminium can for the propeller<br>
+      - A plastic bottle for the chassis
+<br><br>
+      Provided materials include:<br>
+      - 4x Plastic Bottle Cap Lids<br>
+      - 1x 3v Electric Motor<br>
+      - 2x Wood Dowels/Skewers<br>
+      - 1x Switch<br>
+      - Wires
+    </td>
+  </tr>
+
+  <tr>
+    <td>Step 2</td>
+    <td style="text-align: left; padding-left: 10px;">
+        Step 2: To begin, first use a soldering iron (intended for use on plastic) to melt the back of the bottle off
+<br><br>Step 3: Using the soldering iron, make a cutout on the side of the bottle where the switch will be mounted
+<br><br>
+Alternatively a saw or other device could be used to make these cuts
+
+    </td>
+  </tr>
+
+  <tr>
+    <td>Step 4</td>
+    <td style="text-align: left; padding-left: 10px;">
+      Step 4: Melt two holes into each side of the bottle (ensuring the line up with their pair on the opposite side)
+<br><br>
+Alternatively a drill or other device could be used to make these cuts
+<br><br>
+Step 5: Insert the wooden down/skewers into each hole
+<br><br>Step 6: Gather 4 Bottle lids and use hot glue to attach one to the end of each side of the two dowels
+
+    </td>
+  </tr>
+
+  <tr>
+    <td>Step 4</td>
+    <td style="text-align: left; padding-left: 10px;">
+      Step 7: Use wire strippers to remove the insulation (if applicable)<br><br>
+Step 8: Using a soldering iron (intended for soldering wires) solder the wires from the battery pack to the switch
+<br><br>Step 9: Collect two more wires (repeat step 4 for each side), then solder from the switch to the motor
+    </td>
+  </tr>
+
+  <tr>
+    <td>Step 5</td>
+    <td style="text-align: left; padding-left: 10px;">
+      Step 10: Mount each component into or onto the bottle. Mount the switch in its hole (made in step 3), the battery pack to the inside of the bottle, and the motor on the outside on the top (opposite side to that of the wheels)
+<br><br>Step 11: Use hot glue, tape, or another adhesive to attach the components
+
+    </td>
+  </tr>
+
+  <tr>
+    <td>Step 6</td>
+    <td style="text-align: left; padding-left: 10px;">
+Step 12: Insert 2 AA Batteries correctly into the battery pack    </td>
+  </tr>
+</table>
+
   <p class="main">
-    <a href="research.html#propeller">Click here to read about the Propeller Design</a>
-        <a href="results.html">Click here to read about the Results</a>
+    <a href="results.html">Click here to read about the Results</a>
 
   </p>
 
