--- a/research.html
+++ b/research.html
@@ -36,6 +36,47 @@
             </td>
         </tr>
     </table><br><br>
+        <p class="subtitle">Definition of Key Terms</p>
+    <p class="main">
+        Stability:<br>
+Stability is the ability of an object to maintain its balance or alignment when subject to external forces. In vehicles stability ensures the object remains upright and balanced thus allowing it to function at maximum capacity without the outside disturbances.
+<br><br>
+Weight Distribution:<br>
+Weight distribution is the allocation of mass within an object. Ensuring proper distribution is crucial to achieving balance and thus stability. Stability in the example of a car improves performance, ensures safety and allows for better balance.
+<br><br>
+Aerodynamics:<br>
+Aerodynamics is the study of how airflow affects and interacts with objects consisting but not limited to vehicles, buildings and airplanes. Effective aerodynamics reduces air resistance and drag improving efficiency and performance. In a car the application of an aerodynamic design would allow for higher speeds, stability and fuel economy.
+    </p>
+        <p class="subtitle">Importance of Stability, Weight Distribution, and Aerodynamics:</p>
+    <p class="main">
+        Why Stability Matters:<br>
+Stability is critical in order to ensure a safe and effective operation of any object in motion, particularly in automotives, airplanes and buildings. For example
+<br><br>
+- A car must remain stable during turning, braking and acceleration in order to prevent loss of control or crashes.<br>
+- Airplanes need to remain stable throughout all phases of flight including takeoff and landing to avoid dangerous oscillations or a loss of control resulting in a crash or other unfavourable outcome.<br>
+- Buildings require immense capability to resist all external and internal forces inflicted on it including wind, earthquakes or heavy loads.<br>
+<br>How it influenced the Design:<br>
+The design of the car used a four wheel base allowing for total stability in the car's structure. The car also featured an elongated design allowing for weight to be spread across the full area of the car.
+<br><br><br>
+
+
+Why Weight Distribution Matters:
+<br>
+Poor weight distribution can cause uneven wearing of components, degraded or worsened performance and failures such as tipping or in extreme cases rolling. Optimal weight distribution helps prevent these issues and improve other aspects. For example:<br><br>
+- In cars, proper weight distribution allows for a car with a balanced center of gravity, thus aiding in cornering and braking.<br>
+- In aircraft, badly balanced weight could influence the plane's yaw, pitch and roll.<br><br>
+How it influenced the Design:<br>
+The design made sure to optimize the distribution of weight throughout the design, by moving where the battery pack was placed the center of gravity was able to be changed to optimize performance. This also influenced the stability of the dragster.<br>
+<br><br>
+Why Aerodynamics Matters:<br>
+Aerodynamics minimizes energy losses and further maximises efficiency. This can achieve better speed, fuel efficiency and stability. For example:<br>
+- In cars, aerodynamic designs can create a purposeful use of downforce and a smooth even flow of air for optimal performance<br>
+- In aircraft, badly balanced weight could influence the plane's yaw, pitch and roll.<br>
+<br>How it influenced the Design:<br>
+An aerodynamic design was incorporated into the dragster by ensuring the propeller was able to pull as much air as possible having the least amount of resistance.<br>
+
+    </p>
+
     <p class="main">
 
         One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical
