--- a/results.html
+++ b/results.html
@@ -23,6 +23,34 @@
   <p class="main">
     The initial design of the car was built around a chassis made from a small offcut of styrofoam. Styrofoam is a lightweight material but the small size of the offcut meant the car was very compact with every component being packed tightly together. After a few trials were conducted the car was hardly moving. One possible explanation for this would be the uneven weight distribution and the lack of clean airflow compared to the final bottle-based design.
   </p>
+
+<table>
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Savings</th>
+  </tr>
+  <tr>
+    <td>Peter</td>
+    <td>Griffin</td>
+    <td>$100</td>
+  </tr>
+  <tr>
+    <td>Lois</td>
+    <td>Griffin</td>
+    <td>$150</td>
+  </tr>
+  <tr>
+    <td>Joe</td>
+    <td>Swanson</td>
+    <td>$300</td>
+  </tr>
+  <tr>
+    <td>Cleveland</td>
+    <td>Brown</td>
+    <td>$250</td>
+  </tr>
+</table>
   <p class="main">
     <a href="research.html#propeller">Click here to read about the Propeller Design</a>
   </p>
