--- a/design.html
+++ b/design.html
@@ -47,7 +47,9 @@
   <img src="Design/wiring.png" style="width: 200px;">
     <p class="subtitle">Propeller Designs</p>
       <p class="main" style="text-align: center;">
- <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+ 
+        
+        <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
   <tr>
     <th style="width: 20%;">Number of Blades</th>
     <th style="width: 20%;">Image</th>
@@ -56,25 +58,25 @@
   </tr>
 
   <tr>
-    <td style="text-align: left; padding-left: 10px;">4 (Red Bull Can)</td>    
+    <td style="text-align: left; padding-left: 10px;">4 (Propeller 1)</td>    
     <td><img src="images/4-rb.png" style="width: 350px;"></td>
     <td style="text-align: left; padding-left: 10px;"></td>
     </td>
   </tr>
     <tr>
-    <td style="text-align: left; padding-left: 10px;">4 (Cola Can)</td>    
+    <td style="text-align: left; padding-left: 10px;">4 (Propeller 2)</td>    
     <td><img src="images/4-co.png" style="width: 350px;"></td>
     <td style="text-align: left; padding-left: 10px;"></td>
     </td>
   </tr>
     <tr>
-    <td style="text-align: left; padding-left: 10px;">3 (Mountain Dew Can)</td>    
+    <td style="text-align: left; padding-left: 10px;">3 (Propeller 3)</td>    
     <td><img src="images/3-md.png" style="width: 350px;"></td>
     <td style="text-align: left; padding-left: 10px;"></td>
     </td>
   </tr>
     <tr>
-    <td style="text-align: left; padding-left: 10px;">3</td>    
+    <td style="text-align: left; padding-left: 10px;">3 (Propeller 4)</td>    
     <td><img src="images/3-pt.png" style="width: 350px;"></td>
     <td style="text-align: left; padding-left: 10px;"></td>
     </td>
