--- a/design.html
+++ b/design.html
@@ -100,7 +100,7 @@
     <td style="text-align: left; padding-left: 10px;">High Desnity Styrofoam (from packages)</td>    
     <td style="text-align: left; padding-left: 10px;">Chassis and base material for the car. Used for its lightweight and ease of conforming to specifications.</td>
     <td style="text-align: left; padding-left: 10px;">Used as model making foam, offcuts used.</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/styrofoam.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Free
     </td>
   </tr>
@@ -108,7 +108,7 @@
     <td style="text-align: left; padding-left: 10px;">Plastic Bottle (Lipton Ice Tea)</td>    
     <td style="text-align: left; padding-left: 10px;">New Chassis for the car.</td>
     <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/plastic-bottle.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Free
     </td>
   </tr>
@@ -116,7 +116,7 @@
     <td style="text-align: left; padding-left: 10px;">Rubber Band (from Vegetable or Sushi packaging)</td>    
     <td style="text-align: left; padding-left: 10px;">Used to create better grip from the wheels and the path. Will also be used to hold parts together when they require to be taken off regularly.</td>
     <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/rubber-band.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Free
     </td>
   </tr>
@@ -124,7 +124,7 @@
     <td style="text-align: left; padding-left: 10px;">Bottle Caps (milk carton or bottle)</td>    
     <td style="text-align: left; padding-left: 10px;">Used as the wheelbase for their size and texture.</td>
     <td style="text-align: left; padding-left: 10px;">Bottle cap for Lipton Ice Tea</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/lid.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Free
     </td>
   </tr>
@@ -132,7 +132,7 @@
     <td style="text-align: left; padding-left: 10px;">Sheet from Aluminium Can</td>    
     <td style="text-align: left; padding-left: 10px;">Used as the propeller due to its lightness and ability to hold its shape.</td>
     <td style="text-align: left; padding-left: 10px;">Aluminium Drink Can</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/aluminium-can-sheet.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Free
     </td>
   </tr>
@@ -140,7 +140,7 @@
     <td style="text-align: left; padding-left: 10px;">Wooden Dowel/Skewers</td>    
     <td style="text-align: left; padding-left: 10px;">Used to allow the wheels to spin.</td>
     <td style="text-align: left; padding-left: 10px;">N/A</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/dowel.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Supplied
     </td>
   </tr>
@@ -148,7 +148,7 @@
     <td style="text-align: left; padding-left: 10px;">Motor</td>    
     <td style="text-align: left; padding-left: 10px;">Used to power the propeller.</td>
     <td style="text-align: left; padding-left: 10px;">N/A</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/motor.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Supplied: Approx $3.50
     </td>
   </tr>
@@ -156,23 +156,31 @@
     <td style="text-align: left; padding-left: 10px;">Battery Pack</td>    
     <td style="text-align: left; padding-left: 10px;">Used to hold the batteries.</td>
     <td style="text-align: left; padding-left: 10px;">N/A</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/battery-pack.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Supplied: Approx $2.00
+    </td>
+  </tr>
+              <tr>
+    <td style="text-align: left; padding-left: 10px;">Switch</td>    
+    <td style="text-align: left; padding-left: 10px;">Used to toggle the circuit between the powered and unpowered state.</td>
+    <td style="text-align: left; padding-left: 10px;">N/A</td>
+    <td><img src="images/switch.png" style="width: 280px;"></td>
+    <td style="text-align: left; padding-left: 10px;">Supplied: Approx $10.00
     </td>
   </tr>
               <tr>
     <td style="text-align: left; padding-left: 10px;">Wires</td>    
     <td style="text-align: left; padding-left: 10px;">Used to send current and power between the components motor.</td>
     <td style="text-align: left; padding-left: 10px;">N/A</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/wires.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Supplied: Approx $1.50
     </td>
   </tr>
                 <tr>
-    <td style="text-align: left; padding-left: 10px;">Batteries</td>    
+    <td style="text-align: left; padding-left: 10px;">AA Batteries</td>    
     <td style="text-align: left; padding-left: 10px;">Used to power the components.</td>
     <td style="text-align: left; padding-left: 10px;">N/A</td>
-    <td>IMAGE HERE</td>
+    <td><img src="images/battery-pack.png" style="width: 280px;"></td>
     <td style="text-align: left; padding-left: 10px;">Supplied: Approx $5.00
     </td>
   </tr>
