--- a/navbar.html
+++ b/navbar.html
@@ -1,12 +1,12 @@
 <div class="navbar-menu">
     <div class="left">
-        <a href="index.html">Home</a>
+        <a href="index.html" style="font-size: 24px;">Home</a>
     </div>
     <div class="navbar-content">
-        <a href="overview.html">Overview</a>
-        <a href="research.html">Research</a>
-        <a href="design.html">Design</a>
-        <a href="results.html">Results</a>
-        <a href="bibliography.html">Bibliography</a>
+        <a href="overview.html" style="font-size: 24px;">Overview</a>
+        <a href="research.html" style="font-size: 24px;">Research</a>
+        <a href="design.html" style="font-size: 24px;">Design</a>
+        <a href="results.html" style="font-size: 24px;">Results</a>
+        <a href="bibliography.html" style="font-size: 24px;">Bibliography</a>
     </div>
 </div>
