--- a/research.html
+++ b/research.html
@@ -35,7 +35,18 @@
                 Reduces acceleration or low-speed thrust, making it harder to accelerate.
             </td>
         </tr>
-    </table><br><br>
+            </table>
+    <p class="main">
+        The efficiency of a propeller design is based on how much of the engine's power is turned into thrust. While having more blades increases thrust, each blade also increases drag which reduces efficiency. 
+<br><br>
+One way to increase thrust is to extend the length of each blade to make more thrust but keep efficiency high. However, increasing the length of a propeller blade isn’t always possible, because longer blades reduce ground clearance. Increasing the blade length too much can lead to blades hitting the ground or other parts of the vehicle.
+<br><br>
+An optimal propeller design should balance the thrust to drag ratio while maximising the size and efficiency within the available space.
+<br><br>
+The information gathered from this research was instrumental in the design choices of the propellers. The designs sought to find, then further optimize the optimal pitch and blade specifications in order to meet a perfect equilibrium between acceleration and higher rpm performance.
+    </p>
+
+
         <p class="subtitle">Definition of Key Terms</p>
     <p class="main">
         Stability:<br>
@@ -76,24 +87,27 @@ Aerodynamics minimizes energy losses and further maximises efficiency. This can 
 An aerodynamic design was incorporated into the dragster by ensuring the propeller was able to pull as much air as possible having the least amount of resistance.<br>
 
     </p>
+        <p class="subtitle">Future Modes of Transport</p>
+        <p class="subtitle">Personal (Battery)</p>
 
     <p class="main">
 
-        One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical
-        takeoff and landing (eVTOL) vehicles. eVTOL's aim is to completely remove the issue of traffic and fly at a
-        conveniently fast speed, while remaining affordable enough for the average person. eVTOL's, while seeming
-        futuristic and far-fetched, have had many advancements recently. On the 11th of March 2025, an eVTOL company
-        named AVIC tested two new aircraft. Sources say it will have completed its maiden flight by the end of 2025.
-        eVTOLs use high-density solid-state batteries to contain large amounts of energy in a small and light area.
-        These new batteries charge fast, weigh less, last longer, and are much safer.
+One of the most prominent and promising upcoming methods of sustainable transport are the electrical vertical takeoff and landing (eVTOL) vehicles. eVTOL's aim is to completely remove the issue of traffic and fly at a conveniently fast speed, while remaining affordable enough for the average person. eVTOL's while seeming futuristic and far-fetched have had many advancements recently. On the 11th of March 2025 an eVTOL company named AVIC tested two new aircrafts. With sources saying it will have completed its maiden flight by the end of 2025. eVTOL's use high density solid state batteries to contain large amounts of energy in a small and light area. These new batteries charge fast, weigh less and last longer while also remaining much safer.
 
-        <br><br>
+</p>
+        <p class="subtitle">Public (Hydrogen)</p>
+    <p class="main">
 
-        In the public transport sector, new technology for hydrogen-powered trains has been explored. New PEM
-        (proton-exchange membrane) fuel cells have been developed for the trains. These fuel cells are able to contain
-        much denser amounts of hydrogen in the same space, making the hydrogen route much more viable. One of the major
-        drawbacks to hydrogen fuel is its tendency to explode and catch fire, causing much devastation. This new type of
-        fuel cell drastically improves the safety of the cell while improving efficiency.
+        In the public transport sector new technology for hydrogen powered trains has been explored. New PEM (proton-exchange membrane) fuel cells have been developed for application in trains. These fuel cells are able to contain much denser amounts of hydrogen in the same space, making the hydrogen route much more viable. One of the major drawbacks to hydrogen fuel is its tendency to explode and catch fire, causing much devastation. This new type of fuel cell drastically improves the safety of the cell while improving the efficiency.
+
+        </p>
+                <p class="subtitle">Private (Hydrogen)</p>
+    <p class="main">
+While electrical vertical takeoff and landing (eVTOL) vehicles are becoming a reality for public transportation, hydrogen fueled technology are making their way into the aviation industry. Hydrogen fueled planes would use cells that convert hydrogen into electricity with the byproduct only being water vapor, creating a zero emission fuel alternative to jet fuel which has harmful emissions like Co2. Companies like Airbus are working on prototypes aimed at commercial planes fueled by hydrogen by 2030.
+</p>
+                <p class="subtitle">Public (Battery)</p>
+    <p class="main">
+Electric battery technology is also making waves in the field of public transportation, particularly in that of urban settings. Many cities around the world are now choosing to invest in fleets of battery powered electric buses rather than their internal combustion engine counterparts. These fleets now rely on new high capacity solid state batteries. These advanced batteries allow for much longer drives between charges and faster charge times while greatly reducing the amount of maintenance needed compared to traditional buses. The automobile company Daimler has recently rolled out an all new bus design featuring these solid state batteries. Another positive for solid state batteries is how much safer they are, this is due to the solid instead of liquid electrolyte being used in the battery. Traditionally these electrolytes would be made of a strong acid (sulphuric acid in most cases), this poses huge risk as if the battery casing was to leak then the acid could cause extreme injury.
         <a href="design.html">Click here to read about the Design</a>
     </p>
 
