--- a/results.html
+++ b/results.html
@@ -14,6 +14,54 @@
   </div>
   <div style="padding-top: calc(8vh + 200px + 2vh + 9vh);"></div>
 
+
+  <p class="subtitle">Step by Step Trial Process</p>
+  <table style="width: 80%; font-size: 18px; border-collapse: collapse;">
+  <tr>
+    <th>Images</th>
+    <th>Instructions</th>
+  </tr>
+
+  <tr>
+    <td>N/A</td>
+    <td style="text-align: left; padding-left: 10px;">
+     Step 1: Acquire the required materials:<br>
+1x measuring tape<br>
+1x roll of tape to mark points<br>
+1x device/camera to film and time car
+    </td>
+  </tr>
+
+  <tr>
+    <td><img src="images/trial-diagram.png" style="width: 320px;"></td>
+    <td style="text-align: left; padding-left: 10px;">
+        Step 2: Measure out 3 metres on a flat and clear surface<br><br>
+Step 3: Cut out a section (1.5m) and place it on each end of the 3 metres
+
+    </td>
+  </tr>
+
+  <tr>
+    <td><img src="images/trial.png" style="width: 320;"></td>
+    <td style="text-align: left; padding-left: 10px;">
+Step 4: Place camera (or get someone to hold the camera) and start recording<br><br>
+Step 5: Position the car at the one line of the 3 metre space and point it towards the other side so when let go it will travel towards the opposite 3 metre marked point.
+
+    </td>
+  </tr>
+
+  <tr>
+    <td>N/A</td>
+    <td style="text-align: left; padding-left: 10px;">
+Step 6: Finish filming and record the results in a table<br><br>
+Step 7: Repeat from step 4 to conduct multiple trials (conduct 5 trials at a minimum)<br><br>
+Step 8: Repeat from step 4 after making a modification to the design. (including the set of trials). Do at least 2 sets with different modifications.
+
+    </td>
+  </tr>
+
+</table>
+<br>
   <table style="width: 80%;">
   <tr>
     <th>Propeller 1</th>
@@ -69,7 +117,7 @@
     <td>Improvements to the car allowed the dragster to move faster and with less of a noticeable turn but was unable to beat trials 1 through 5. The dragster to complete the course.</td>
   </tr>
 </table>
-<p class="subtitle">Trial Table - Testing</p>
+<br>
 <table style="width: 80%;">
     <tr>
     <th colspan="4" style="text-align: left; font-size: 18px;">Trials 1-5</th>
@@ -252,7 +300,10 @@
 </table>
   <p class="subtitle">Failures</p>
   <p class="main">
-    The initial design of the car was built around a chassis made from a small offcut of styrofoam. Styrofoam is a lightweight material but the small size of the offcut meant the car was very compact with every component being packed tightly together. After a few trials were conducted the car was hardly moving. One possible explanation for this would be the uneven weight distribution and the lack of clean airflow compared to the final bottle-based design.
+The initial design of the car was built around a chassis made from a small offcut of styrofoam. Styrofoam is a lightweight material but the small size of the offcut meant the car was very compact with every component being packed tightly together. After a few trials were conducted the car was hardly moving. One possible explanation for this would be the uneven weight distribution and the lack of clean airflow compared to the final bottle-based design.
+<br><br>Another failure in the design was to do with the propellers. Propellers 2 and 3 were unable to generate enough thrust to move the car forward, most likely due to multiple factors which included the unoptimised angles and small blades which cost them to not efficiently push air backward and create the forward motion needed. Additionally, with the propeller’s 3 blade size being too short and narrow, it significantly limited the air that it could catch and push during the rotation. Because the blades were undersized they couldn't generate enough air resistance to push the car. This resulted in a propeller that was both inefficient and underpowered which added to the car’s lack of movement during the test when using this blade. 
+<br><br>While propeller 2's main reason for the failure to push the car forward was due to that the propeller would direct air upwards rather than pushing air backwards which is needed for propelling the car forward. This was mainly caused by the extreme pitch of the blades. When the blades are angled too steep, they tend to start lifting air up vertically instead of pushing in the correct direction. 
+<br><br>The original styrofoam body was too small, causing poor weight distribution, which made the car hard to move. While propellers 2 and 3 failed to move the car mainly due to their blade being too small or angled, propellers 2 couldn't catch enough air, and propeller 3 blew air up instead of backwards. These issues highlighted the need for improved weight distribution and better designed propellers for performance.
   </p>
   <p class="subtitle">Asessment Against Criteria</p>
     <p class="main">
